--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "deploy": "aws s3 sync dist/ s3://food-project-frontend-host"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
